working rest api, edit of endpoints todo
